2005-06-19  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk-sections.txt: Updates.

2005-06-18  Matthias Clasen  <mclasen@redhat.com>

	* gtk/tmpl/gtkuimanager.sgml: Document that 
	toolitem elements may have menu subelements.

	* gtk/gtk-sections.txt: Updates

2005-06-17  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk-sections.txt: 
	* gdk/gdk-sections.txt: Add urgency hint API.

2005-06-14  Matthias Clasen  <mclasen@redhat.com>

	* gdk/gdk-sections.txt: Add new functions.

2005-06-13  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk-sections.txt: Add new functions.

	* gtk/tmpl/gtkfontsel.sgml: Some more details (#307384, Billy
	Biggs)

2005-06-11  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk-sections.txt: Add gtk_icon_view_get_visible_range

2005-06-10  Michael Natterer  <mitch@imendio.com>

	* gtk/gtk-sections.txt: Add gtk_action_get_accel_closure

2005-06-10  Matthias Clasen  <mclasen@redhat.com>

	* gtk/tmpl/gtkclipboard.sgml: 
	* gtk/gtk-sections.txt: Add GtkClipboardIamgeReceivedFunc

	* gtk/tmpl/gtkpaned.sgml: 
	* gtk/tmpl/gtkmenu.sgml: 
	
	* gtk/tmpl/gtkmenubar.sgml: 
	* gtk/tmpl/gtkimage.sgml: 
	* gtk/tmpl/gtkfontsel.sgml: 
	* gtk/tmpl/gtkbbox.sgml: 
	* gtk/tmpl/gtkadjustment.sgml: 
	* gtk/tmpl/gtkaccelgroup.sgml: 
	* gtk/tmpl/gtkaboutdialog.sgml: Additions.

2005-06-09  Matthias Clasen  <mclasen@redhat.com>

	* gdk-pixbuf/gdk-pixbuf-sections.txt: Add some symbols.

	* gdk/gdk-sections.txt: 
	* gdk/tmpl/cairo_interaction.sgml: 
	* gdk/gdk-docs.sgml: Add a section for the Cairo functions.

	* gtk/gtk-sections.txt: Add new icon view function.

2005-05-26  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk-sections.txt: Add new entry completion functions.

2005-05-25  Matthias Clasen  <mclasen@redhat.com>

	* gdk-pixbuf/gdk-pixbuf-sections.txt: Add GdkPixbufSimplAnim
	functions.

2005-05-20  Matthias Clasen  <mclasen@redhat.com>

	* gtk/migrating-GtkAction.sgml: Fix an example.  (#304808,
	Ghorban M. Tavakoly)
